--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,26 @@
   "rewrites": [
     {
       "source": "/property-management",
-      "destination": "https://erichsimon.com"
+      "destination": "https://property-management-rho-lake.vercel.app/"
     },
     {
       "source": "/property-management/:path*",
       "destination": "https://property-management-rho-lake.vercel.app/:path*"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/property-management/(.*)",
+      "headers": [
+        {
+          "key": "x-vercel-enable-rewrite-caching",
+          "value": "1"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
     }
   ]
 }
