--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "rewrites": [
     {
-      "source": "/property-management",
-      "destination": "https://property-management-rho-lake.vercel.app/"
+      "source": "/blog",
+      "destination": "https://erichsimon.com/blog/"
     },
     {
-      "source": "/property-management/:path*",
-      "destination": "https://property-management-rho-lake.vercel.app/:path*"
+      "source": "/test/:path*",
+      "destination": "https://erichsimon.com/:path*"
     }
   ],
   "headers": [
